--- a/cloud-config.yaml
+++ b/cloud-config.yaml
@@ -14,7 +14,7 @@ coreos:
         [Service]
         Type=oneshot
         RemainAfterExit=yes
-        ExecStart=/bin/bash -c '(/usr/sbin/blkid -t TYPE=ext4 | grep /dev/sdf) || (/usr/sbin/wipefs -f /dev/sdb && /usr/sbin/mkfs.ext4 -F /dev/sdb)'
+        ExecStart=/bin/bash -c '(/usr/sbin/blkid -t TYPE=ext4 | grep /dev/sdb) || (/usr/sbin/wipefs -f /dev/sdb && /usr/sbin/mkfs.ext4 -F /dev/sdb)'
     - name: var-lib-docker.mount
       command: start
       content: |
